Update Chess Royale to v2.0

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="language-selector">
             <button class="lang-btn selected" data-lang="en">English</button>
             <button class="lang-btn" data-lang="it">Italiano</button>
+            <button class="lang-btn" data-lang="zh">中文</button>
         </div>
         
         <!-- SETUP SCREEN -->
@@ -260,6 +261,7 @@
                         <div class="chessboard" id="game-board"></div>
                     </div>
                     <div class="game-controls" id="game-controls">
+                        <button class="control-btn" id="replay-move" style="display:none;" data-i18n="replayMove">Replay Last Move</button>
                         <button class="control-btn" id="next-move" style="display:none;" data-i18n="nextMove">Next Move</button>
                         <button class="control-btn" id="new-game" data-i18n="newGame">New Game</button>
                     </div>
