--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Chess Royale</h1>
+        <h1>Chess Royale <span class="version">(v. 2.2)</span></h1>
         <p class="subtitle" data-i18n="subtitle">Build your army, conquer the kingdom</p>
         
         <div class="language-selector">
